heavy refactor on the web workench, several small bugfixes. few new functionality added, see changes.txt for more detailed info

--- a/web_workbench/static/styles.css
+++ b/web_workbench/static/styles.css
@@ -106,6 +106,8 @@ body,html{
 .client_area_class {
     background-color: #ffffff;
     cursor: default;
+    position: relative;
+    overflow: auto;
 }
 .layout_panel_class {
     flex-direction: row;
